# openai_chat

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  console.rs  deepseek.rs  main.rs
