[package]
name = "openai_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API requests
reqwest = { version = "0.12", features = ["json"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variable management
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Console I/O utilities
crossterm = "0.29.0"

# Optional: For colored output
colored = "3.0.0"
